2011-4-22
Added push-bos-eos which annotates forests with <s> </s>. Use with no-bos-eos options for ngram/variational features.
Added prune-edge which prunes forests wrt # of edges for each node.
Added parse-tree which is an approximated beam variant of compose-tree
Randomize hill-climbing for oracle computation.
Incompatible change: word-penalty feature do not count <s> </s> as a "word"
Bugfix: when assigned weights or weights-one, do not perform "assign"
Bugfix: prune-kbest will not "prune" when we cannot generate suffixient # of kbests.

2011-4-18
Added coarse-to-fine parsing
Added coarse grammar learning
Added epsilon-removal for hypergraph
Added no-bos-eos option to ngram feature which will not score via <s> </s>, assuming <s> and </s> are used in grammar
Reworked attribute vector for smaller memory allocation (but slower for insert/erase)
Use -99 for unigram probability of <s> taken from SRILM

2011-3-28
New grammar API: use --grammar and/or --tree-grammar only, and removed options, such as --grammar-static etc.
Added parser component. Currently, we support tabular-CKY and bottom-up agenda-based best-first search with pruning.
Added parseval evaluator.
Added grammar learner based on latent annotation grammar
Better scanner/generator for hypergraph/lattice structures etc. by eliminating (potentially slower) symbol-tables.

2011-2-14
Better vocabulary management by eliminating temporary buffer
Use boost.spirit for parsing/generating numerics

2011-1-17
Support tree-to-string translation (probably, the code will work for tree-to-tree)
Added sort-tail operation which sort tails by its order in rule's non-terminal index.
Added lexicon learning (dice and model1 via cicada_lexicon_{dice,model1}) and lexicon model learning from word alignment (cicada_lexicon)
Added word-cluster learning (cicada_cluster_word)
Added filter for forest-charniak and egret (cicada_filter_charniak) and CONLL-X (cicada_filter_conll)